third_party/rust/chromium_crates_io/vendor/zerocopy-0.7.35/tests/ui-nightly/transmute-mut-src-immutable.rs
// Copyright 2023 The Fuchsia Authors
//
// Licensed under a BSD-style license <LICENSE-BSD>, Apache License, Version 2.0
// <LICENSE-APACHE or https://www.apache.org/licenses/LICENSE-2.0>, or the MIT
// license <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your option.
// This file may not be copied, modified, or distributed except according to
// those terms.

extern crate zerocopy;

use zerocopy::transmute_mut;

fn main() {}

fn ref_src_immutable() {
    // `transmute_mut!` requires that its source type be a mutable reference.
    let _: &mut u8 = transmute_mut!(&0u8);
}
